<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBackgroundDark"
    android:padding="5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddGameFragment">

    <com.google.android.material.card.MaterialCardView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/white"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/fragment_add_game_label_title"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_title"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:hint="@string/fragment_add_game_label_platform"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_platform"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100"
                android:baselineAligned="false">
                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/fragment_add_game_label_day"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:layout_width="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_release_date_day"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/fragment_add_game_label_month"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:layout_width="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_release_date_month"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:hint="@string/fragment_add_game_label_year"
                    android:layout_height="wrap_content"
                    android:layout_weight="33"
                    android:layout_width="0dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/input_release_date_year"
                        android:background="@color/white"
                        android:layout_width="match_parent"
                        android:inputType="number"
                        android:layout_height="wrap_content"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>